# resume

./: CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
assets/: index-B-4c2oxL.css  index-B1fsbpVA.js  index-Bar4qMuT.css  index-BsmhijUT.js  index-BykZE7IL.css  index-CXnOZyvp.css  index-CcIXOD77.js  index-Cy5foW5E.css  index-CyLjPAJR.js  index-D0n7te--.css  index-D30AysJD.js  index-DAgr1kXA.js  index-DXOA5rcU.js  index-DwhlY4pJ.js  index-Dxh13Dgp.css  index-DyRp2gX1.js  index-IPVgsIin.js  index-deb96iNR.css  index-fOHErVH4.css  index-hK5J1qCa.js  index-hzsdhHhw.js  index-mLCaXEI5.js  index-vezgTDsh.css
src/: App.tsx  index.css  main.tsx
src/components/: ProjectCard.tsx  ProjectsModal.tsx
src/components/ui/: modal.tsx
src/contexts/: CVContext.tsx
src/data/: Alexander_Berger_CV.yaml
src/services/: cvService.tsx
src/types/: cv.ts
